Avoid using raw Setting objects